chore: cleanup and bump gradle